[package]
name = "horrorshow"
description = "a templating library written in rust macros"
version = "0.6.1"
authors = ["Steven Allen <steven@stebalien.com>"]

documentation = "https://docs.rs/horrorshow"
repository = "https://github.com/Stebalien/horrorshow-rs"
keywords = ["html", "template"]
license = "MIT/Apache-2.0"

[dev-dependencies]
maud = "0.13" # target: nightly
maud_macros = "0.13" # target: nightly

[features]
default = ["ops"]
ops = []
