[package]
name = "horrorshow"
description = "a templating library written in rust macros"
version = "0.6.6"
authors = ["Steven Allen <steven@stebalien.com>"]

documentation = "https://docs.rs/horrorshow"
repository = "https://github.com/Stebalien/horrorshow-rs"
keywords = ["html", "template"]
categories = ["template-engine"]
license = "MIT/Apache-2.0"

[features]
default = ["ops"]
ops = []
